# titiler-md-demo

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: container.yaml
infrastructure/aws/cdk/: app.py  config.py
infrastructure/aws/lambda/: Dockerfile  ecr.Dockerfile  handler.py  lambda.Dockerfile
notebooks/: nasa_mur_sst_zarr.ipynb  nex_gddp_cmip6.ipynb  noaa_cdr_netcdf.ipynb
runtimes/: pyproject.toml
runtimes/app/: extensions.py  io.py  main.py
runtimes/titiler_md_demo/: __init__.py  extensions.py  main.py  settings.py
runtimes/titiler_md_demo/templates/: index.html
